--- a/composer.json
+++ b/composer.json
@@ -23,7 +23,18 @@
     "require": {
         "drupal-composer/drupal-scaffold": "^2.0.0",
         "cweagans/composer-patches": "^1.6.0",
-        "acquia/lightning": "~2.1.8"
+        "acquia/lightning": "~2.1.8",
+        "drupal/commerce": "@stable",
+        "drupal/module_filter": "@stable",
+        "drupal/features": "@stable",
+        "drupal/paragraphs": "@stable",
+        "drupal/classy_paragraphs": "^1.0@beta",
+        "drupal/adminimal_theme": "^1.3",
+        "drupal/bootstrap_barrio": "^4.6",
+        "drupal/panels": "^4.2",
+        "drupal/panelizer": "^4.0",
+        "drupal/layout_plugin": "^1.0@alpha",
+        "drupal/bootstrap_library": "^1.9"
     },
     "repositories": [
         {
